src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
	@layer utilities {
		.parent-enter-effect {
			perspective: 1000px;
		}
		.laser-effect::before {
			left: var(--laser-pos-x, 0);
			top: var(--laser-pos-y, 0);
			width: var(--laser-width, 100px);
			height: var(--laser-height, 2px);
			content: '';
			position: absolute;
			background-color: #6a79f0;
			box-shadow: 0 0 5px 1px rgba(38, 97, 156, 0.6);
		}

		.radial-effect {
			position: absolute;
			top: 0;
			left: 50%;
			transform: translateX(-50%);
			width: 100%;
			height: 100%;
			background: radial-gradient(
				circle at top center,
				var(--radial-color) 0%,
				rgba(255, 0, 0, 0) 10%
			);
			z-index: -1;
			transition: background 1s ease-in-out;
		}

		.playButton {
			width: 70px;
			height: 70px;
			background-color: white;
			clip-path: polygon(30% 0%, 100% 50%, 30% 100%);
			transition: background-color 0.3s;
		}

		.playButton:hover {
			background-color: white;
		}

		.no-scrollbar::-webkit-scrollbar {
			display: none;
		}

		.no-scrollbar {
			-ms-overflow-style: none;
			scrollbar-width: none;
		}

		.laser-effect {
			position: relative;
			filter: brightness(1.15);
			opacity: 0.3;
			transition: transform 1s ease-out, width 0.2s, height 0.2s, opacity 1s ease-out;
			transform: scale(0.8) rotateX(20deg);
			transform-origin: center top;
			overflow: hidden;
		}
		.blob-bg {
			transition: width 0.5s ease-out, height 0.5s ease-out, 2s ease-out, opacity 1.8s ease-out,
				background-color 1s ease-out;
		}
		body,
		button {
			cursor: none;
		}
		.wave-text span {
			display: inline-block;
			animation: wave 1.2s infinite;
		}

		.wave-text span:nth-child(odd) {
			animation-direction: alternate;
		}
		.wave-text span:nth-child(even) {
			animation-direction: alternate-reverse;
		}
	}

	@keyframes wave {
		0%,
		100% {
			transform: translateY(0);
		}
		50% {
			transform: translateY(-0.5px);
		}
	}
}

